# BongoJam

./: .gitignore  CMakeLists.txt  Ideas.txt  LICENSE  README.md  conanfile.py  init.py
bj_bytecode/: HelloWorld.bongo.bongo  UwU.bongo
bj_scripts/: HelloWorld.bj  HelloWorld.bongo
include/: AST.h  Binder.h  Compiler.h  DebugTools.h  Interpreter.h  Lexer.h  LogManager.h  Parser.h  Tools.h
include/compiler/: AST.h  Compiler.h  ConfigManager.h  Lexer.h  Optimizer.h  Parser.h
include/runtime/: Interpreter.h
licenses/: LICENSE
src/: AST.cpp  Compiler.cpp  Interpreter.cpp  Lexer.cpp  LogManager.cpp  Optimizer.cpp  Parser.cpp  main.cpp
src/compiler/: AST.cpp  Compiler.cpp  Lexer.cpp  Optimizer.cpp  Parser.cpp  main.cpp
src/runtime/: Interpreter.cpp  main.cpp
